# scry

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.mcp  LICENSE.md  Makefile  README.md  catalog-info.yaml  completion_plan.md  mkdocs.yml  plan.md  pyproject.toml  pytest.ini  sonar-project.properties
.claude/skills/pr-quality/: SKILL.md
.claude/skills/push-watch/: SKILL.md
.claude/skills/sonar-fix/: SKILL.md
.claude/skills/sonar-status/: SKILL.md
.github/workflows/: build.yml
docker/api/: Dockerfile
docker/base/: Dockerfile
docker/compose/: docker-compose.yml
docker/worker/: Dockerfile
docs/: index.md
docs/api/: authentication.md  endpoints.md
docs/architecture/: data-flow.md  modules.md  overview.md
docs/development/: environment.md  local.md  testing.md
docs/getting-started/: docker.md  installation.md  quick-start.md
docs/guides/: browser-pool.md  mcp.md
scripts/: debug_golem_explorer.py  one_shot_free_places.py  test_browser_tools_api.py  test_cdg_airport.py  test_frankfurt_airport.py  test_in_docker.sh  test_munich_airport.py  test_smartscraper.py  test_validation_selfheal.py
src/scry/: app.py  mcp_server.py  telemetry.py  worker.py
src/scry/adapters/: anthropic.py  browser_executor.py  browser_pool.py  dom_tree.py  element_refs.py  playwright.py  playwright_explorer.py
src/scry/api/: dto.py  routes.py
src/scry/config/: settings.py
src/scry/core/codegen/: generator.py
src/scry/core/cookie/: __init__.py  detector.py
src/scry/core/executor/: runner.py
src/scry/core/extractor/: extract.py  llm_extract.py  selector_plan.py
src/scry/core/ir/: model.py
src/scry/core/nav/: explore.py  navigator.py
src/scry/core/optimizer/: optimize.py  selectors.py
src/scry/core/planner/: plan_builder.py
src/scry/core/self_heal/: diagnose.py  patch.py
src/scry/core/validator/: validate.py
src/scry/runtime/: events.py  storage.py
src/universal_scraper/: app.py  worker.py
src/universal_scraper/adapters/: anthropic.py  anthropic_llm.py  browser_use.py  playwright.py  playwright_explorer.py
src/universal_scraper/api/: dto.py  routes.py
src/universal_scraper/core/codegen/: generator.py
src/universal_scraper/core/executor/: runner.py
src/universal_scraper/core/extractor/: extract.py  selector_plan.py
src/universal_scraper/core/ir/: model.py
src/universal_scraper/core/nav/: explore.py  navigator.py
src/universal_scraper/core/optimizer/: optimize.py
src/universal_scraper/core/planner/: plan_builder.py
src/universal_scraper/core/self_heal/: diagnose.py
src/universal_scraper/runtime/: events.py  storage.py
tests/: conftest.py  test_airport_exploration_to_script.py  test_all_airports_pipeline.py  test_api_routes.py  test_browser_use_multi_step.py  test_cookie_detector.py  test_coverage_improvement.py  test_coverage_improvements.py  test_data_extraction.py  test_event_bus.py  test_example_baseline.py  test_exploration_vs_generated.py  test_form_login_integration.py  test_heise_news_integration.py  test_multiple_news_sites.py  test_native_explorer_integration.py  test_new_actions.py  test_regression_parkundride.py  test_self_healing.py  test_self_healing_direct.py  test_self_healing_integration.py  test_sonar_fixes.py  test_unified_implementation.py  test_v1_minimal.py  test_v2_flow.py  test_v3_codegen.py  test_v3_integration.py  test_validation_system.py  test_worker.py
