[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scry"
version = "0.1.0"
description = "Scry - Agentic web scraper with LLM-driven exploration and self-healing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "pydantic>=2.6",
  "playwright>=1.43",
  "beautifulsoup4>=4.12",
  "redis>=5",
  "jsonschema>=4.22",
  "anthropic>=0.29",
  "fastmcp>=2.0",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.0.0",
]

[project.scripts]
scry-api = "scry.app:app"
scry-mcp = "scry.mcp_server:main"

[tool.uvicorn]
factory = true
