[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scry"
version = "0.1.0"
description = "Scry - Agentic web scraper with LLM-driven exploration and self-healing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "pydantic>=2.6",
  "playwright>=1.43",
  "beautifulsoup4>=4.12",
  "redis>=5",
  "jsonschema>=4.22",
  "anthropic>=0.29",
  "fastmcp>=2.0",
  "pillow>=10.0",
  # OpenTelemetry
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
  "opentelemetry-instrumentation-starlette>=0.48b0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.0.0",
  "mypy>=1.19.1",
  "ruff>=0.14.14",
  "bandit>=1.9.3",
]

[project.scripts]
scry-api = "scry.app:app"
scry-mcp = "scry.mcp_server:main"

[tool.uvicorn]
factory = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# SonarQube-compatible output (junit.xml and coverage.xml)
# Usage: pytest --junitxml=junit.xml --cov=src/scry --cov-report=xml
addopts = "--junitxml=junit.xml"
markers = [
    "integration: marks tests that require external services",
]

[tool.coverage.run]
# Use relative paths in coverage.xml for SonarQube compatibility
relative_files = true
source = ["src"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "S",    # flake8-bandit (security) - for SARIF/SonarQube
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from inside except without explicit exception chaining
    "SIM105", # use contextlib.suppress
    "SIM108", # use ternary operator instead of if-else
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # assert in tests is expected
    "S311",   # pseudo-random generator ok in tests
]
"**/test_*.py" = [
    "S101",   # assert in tests is expected
    "S311",   # pseudo-random generator ok in tests
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Ignore errors for external dependencies without stubs
[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "bs4.*",
    "redis.*",
    "anthropic.*",
    "fastmcp.*",
    "PIL.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

# Relax type checking in tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
ignore_errors = true
